--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -19,7 +19,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>Temp\bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_5_0;UNITY_5_5;UNITY_5;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_GENERICS;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_UNET;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;INCLUDE_DYNAMIC_GI;INCLUDE_GI;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;INCLUDE_PUBNUB;ENABLE_PLAYMODE_TESTS_RUNNER;ENABLE_SCRIPTING_NEW_CSHARP_COMPILER;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_EVENT_QUEUE;ENABLE_CLUSTERINPUT;ENABLE_VIDEO;ENABLE_VR;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;ENABLE_PROFILER;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_5_6_0;UNITY_5_6;UNITY_5;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_GENERICS;ENABLE_PVR_GI;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_RUNTIME_NAVMESH_BUILDING;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_UNET;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;ENABLE_NATIVE_ARRAY;INCLUDE_DYNAMIC_GI;INCLUDE_GI;PLATFORM_SUPPORTS_MONO;INCLUDE_PUBNUB;ENABLE_PLAYMODE_TESTS_RUNNER;ENABLE_SCRIPTING_NEW_CSHARP_COMPILER;ENABLE_VIDEO;UNITY_ANDROID;ENABLE_SUBSTANCE;UNITY_ANDROID_API;ENABLE_EGL;ENABLE_NETWORK;ENABLE_RUNTIME_GI;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;PLATFORM_SUPPORTS_ADS_ID;UNITY_CAN_SHOW_SPLASH_SCREEN;ENABLE_VR;ENABLE_UNITYADS_RUNTIME;UNITY_UNITYADS_API;ENABLE_MONO;NET_2_0_SUBSET;ENABLE_PROFILER;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_NATIVE_ARRAY_CHECKS;UNITY_TEAM_LICENSE;UNITY_HAS_GOOGLEVR</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn>0169</NoWarn>
@@ -64,10 +64,35 @@
      <Compile Include="Assets\CloudFaceDetection\DemoScenes\Scripts\UIWebcamSource.cs" />
      <Compile Include="Assets\CloudFaceDetection\DemoScenes\Scripts\WebcamSource.cs" />
      <Compile Include="Assets\CloudFaceDetection\DemoScenes\Scripts\WebcamSourceBase.cs" />
+     <Compile Include="Assets\Fingers\Demo\AsteroidScript.cs" />
+     <Compile Include="Assets\Fingers\Demo\DemoScript.cs" />
+     <Compile Include="Assets\Fingers\Demo\DemoScriptImage.cs" />
+     <Compile Include="Assets\Fingers\Demo\DemoScriptOneFinger.cs" />
+     <Compile Include="Assets\Fingers\Demo\DemoScriptPan.cs" />
+     <Compile Include="Assets\Fingers\Demo\DemoScriptSwipe.cs" />
+     <Compile Include="Assets\Fingers\Demo\DemoScriptZoomableScrollView.cs" />
+     <Compile Include="Assets\Fingers\Script\DeviceInfo.cs" />
+     <Compile Include="Assets\Fingers\Script\FingersScript.cs" />
+     <Compile Include="Assets\Fingers\Script\GestureRecognizer.cs" />
+     <Compile Include="Assets\Fingers\Script\ImageGestureRecognizer.cs" />
+     <Compile Include="Assets\Fingers\Script\LongPressGestureRecognizer.cs" />
+     <Compile Include="Assets\Fingers\Script\OneTouchRotateGestureRecognizer.cs" />
+     <Compile Include="Assets\Fingers\Script\OneTouchScaleGestureRecognizer.cs" />
+     <Compile Include="Assets\Fingers\Script\PanGestureRecognizer.cs" />
+     <Compile Include="Assets\Fingers\Script\RotateGestureRecognizer.cs" />
+     <Compile Include="Assets\Fingers\Script\ScaleGestureRecognizer.cs" />
+     <Compile Include="Assets\Fingers\Script\SwipeGestureRecognizer.cs" />
+     <Compile Include="Assets\Fingers\Script\TapGestureRecognizer.cs" />
+     <Compile Include="Assets\KKSpeechRecognizer\Example\RecordingCanvas.cs" />
+     <Compile Include="Assets\KKSpeechRecognizer\Example\SpeechRecognitionLanguageDropdown.cs" />
+     <Compile Include="Assets\KKSpeechRecognizer\SpeechRecognizer.cs" />
+     <Compile Include="Assets\KKSpeechRecognizer\SpeechRecognizerListener.cs" />
      <Compile Include="Assets\Source\Script\AI\ArtificialIntelligence.cs" />
      <Compile Include="Assets\Source\Script\Controller\ApplicationManager.cs" />
+     <Compile Include="Assets\Source\Script\Controller\AudioFeedbackRecognizer.cs" />
      <Compile Include="Assets\Source\Script\Creator\CSV.cs" />
      <Compile Include="Assets\Source\Script\Creator\DummyCreator.cs" />
+     <Compile Include="Assets\Source\Script\Creator\JSON.cs" />
      <Compile Include="Assets\Source\Script\Creator\PersonalityCreator.cs" />
      <Compile Include="Assets\Source\Script\Model\Activity.cs" />
      <Compile Include="Assets\Source\Script\Model\Attribute.cs" />
@@ -78,10 +103,8 @@
      <Compile Include="Assets\Source\Script\Model\Personality.cs" />
      <Compile Include="Assets\Source\Script\Model\PersonalityNode.cs" />
      <Compile Include="Assets\Source\Script\Model\Reward.cs" />
-     <Compile Include="Assets\Source\Script\Model\RewardCondition.cs" />
      <Compile Include="Assets\Source\Script\Scene\Ball.cs" />
      <Compile Include="Assets\Source\Script\Scene\Food.cs" />
-     <Compile Include="Assets\Source\Script\Scene\SceneManager.cs" />
      <Compile Include="Assets\Source\Script\Singleton.cs" />
      <Compile Include="Assets\Source\Script\UI\AbstractViewController.cs" />
      <Compile Include="Assets\Source\Script\UI\ConditionViewController.cs" />
@@ -89,10 +112,12 @@
      <Compile Include="Assets\Source\Script\UI\DragItemHandler.cs" />
      <Compile Include="Assets\Source\Script\UI\DropItemHandler.cs" />
      <Compile Include="Assets\Source\Script\UI\FeedbackViewController.cs" />
+     <Compile Include="Assets\Source\Script\UI\GestureController.cs" />
      <Compile Include="Assets\Source\Script\UI\GraphicsHelper.cs" />
      <Compile Include="Assets\Source\Script\UI\ItemBoxViewController.cs" />
      <Compile Include="Assets\Source\Script\UI\OutputViewController.cs" />
      <Compile Include="Assets\Source\Script\UI\RadialSliderViewController.cs" />
+     <Compile Include="Assets\Source\Script\UI\ResetViewController.cs" />
      <Compile Include="Assets\Source\Script\UI\SliderViewController.cs" />
      <Compile Include="Assets\Source\Script\UI\ToggleViewController.cs" />
      <None Include="Assets\Standard Assets\Effects\GlassRefraction\Shaders\GlassStainedBumpDistort.shader" />
@@ -122,6 +147,7 @@
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\FisheyeShader.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\Contrast Stretch\Apply.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\frag_ao.cginc" />
+     <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
      <None Include="Assets\Standard Assets\Effects\ToonShading\Shaders\ToonBasicOutline.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_DepthOfField\DepthOfField34.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\MobileBlur.shader" />
@@ -162,8 +188,10 @@
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_Antialiasing\FXAA2.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\ColorCorrection3DLut.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\LensFlareCreate.shader" />
+     <None Include="Assets\Fingers\Readme.txt" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\EdgeDetectNormals.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\PrepareSunShaftsBlur.shader" />
+     <None Include="Assets\Fingers\XamarinAndroidTouchAdapter.txt" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\Blend.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\BlendModesOverlay.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\SimpleClear.shader" />
@@ -178,8 +206,11 @@
  <Reference Include="UnityEngine.Networking">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
  </Reference>
- <Reference Include="UnityEngine.PlaymodeTestsRunner">
- <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/PlaymodeTestsRunner/UnityEngine.PlaymodeTestsRunner.dll</HintPath>
+ <Reference Include="UnityEngine.TestRunner">
+ <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/TestRunner/UnityEngine.TestRunner.dll</HintPath>
+ </Reference>
+ <Reference Include="nunit.framework">
+ <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/TestRunner/nunit.framework.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.Analytics">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
@@ -189,6 +220,9 @@
  </Reference>
  <Reference Include="UnityEngine.VR">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityVR/RuntimeEditor/UnityEngine.VR.dll</HintPath>
+ </Reference>
+ <Reference Include="FullSerializer - Unity">
+ <HintPath>C:/Users/kalin/Documents/ButBucket Projects/tamagorski/Assets/Plugin/FullSerializer - Unity.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
