--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -4,7 +4,7 @@
   <uses-permission android:name="android.permission.INTERNET" />
   <supports-screens android:smallScreens="true" android:normalScreens="true" android:largeScreens="true" android:xlargeScreens="true" android:anyDensity="true" />
   <application android:name="blue.happening.unity.MyApplication" android:theme="@style/UnityThemeSelector" android:icon="@drawable/app_icon" android:label="@string/app_name" android:debuggable="false" android:isGame="true" android:banner="@drawable/app_banner">
-    <activity android:name="blue.happening.unity.Main" android:configChanges="keyboardHidden|orientation|screenSize">
+    <activity android:name="blue.happening.unity.Main" android:configChanges="keyboardHidden|orientation|screenSize" android:keepScreenOn="true">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
